--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
+build_type = debug
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = esphome/ESP32-audioI2S@^2.0.7
